# kombo

./: .dockerignore  .gitignore  CLAUDE.md  CNAME  Dockerfile  README.md  app.py  eiendommer.geojson  entrypoint.sh  fetch_xlsx.py  geocode.py  index.html  missing.csv  pyproject.toml  source.env
.github/workflows/: sync.yml
