[project]
name = "kombo"
version = "1.0.0"
description = "Map every property Oslo kommune owns — geocoded via Geonorge addresses and Kartverket Teig parcel polygons"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "requests>=2.31",
]

[tool.poetry]
# Script-only project: manage dependencies, don't build/install a package.
package-mode = false
